--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -26,8 +26,9 @@ jobs:
         run: pip install --upgrade ruff
 
       - name: Install reviewdog
-        uses: reviewdog/action-reviewdog@v0.20.3
-
+        uses: reviewdog/action-setup@e04ffabe3898a0af8d0fb1af00c188831c4b5893 # v1.3.2
+        run: reviewdog -version
+  
       - name: Run Ruff (only deprecated warnings) with Reviewdog
         run: |
           ruff check . --select UP,B002,B006 --format=github \
