--- a/.github/workflows/clean_action_logs.yml
+++ b/.github/workflows/clean_action_logs.yml
@@ -12,5 +12,6 @@ jobs:
       - uses: yanovation/delete-old-actions@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          dry-run: true
+          days-ago: 30
           keep-latest: 5
+          dry-run: true
