--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -46,16 +46,25 @@ jobs:
         pip install pydantic fastapi JinJa2 uvicorn python-multipart
 
     - name: Analysing the code with pylint
-      continue-on-error: true
+      # Disable immediate exit on error
       # Use .pylintrc 
       # Prevent MPDClient no-member errors, as they are false positives
+      # Fail on fatal(1), error(2) and usage(32), continue warning(4), refactor(8) and convention(16)
       run: |
+        set +e     
         pylint $(git ls-files '*.py') \
         --rcfile=.github/workflows/.pylintrc \
-        --generated-members=self.client.*,mpd.client.* \
+        --generated-members=self.client,mpd.client \
         --output=pylint_result.txt
+        status=$?
+        echo "Raw pylint exit code: $status"
+        masked=$((status & 35))
+        echo "Masked exit code (fatal, error, usage): $masked"
+        exit $masked
+      shell: bash
 
     - name: Upload pylint result
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: pylint_result.txt
