--- a/install_resources/librespot.service.template
+++ b/install_resources/librespot.service.template
@@ -9,6 +9,10 @@ After=network.target
 StandardOutput=append:PLACEHOLDER_LOGFILE_SPOTIFY
 StandardError=append:PLACEHOLDER_LOGFILE_SPOTIFY
 
+
+# Ensure ALSA channel is muted before starting
+ExecStartPre=/usr/bin/amixer -c DigiAMP sset VolumeSpotCon1 0%
+
 # Reset flag files before starting librespot
 ExecStartPre=/bin/bash -c 'echo "0" > PLACEHOLDER_SPOTIFY_PATH/spotactive.flag'
 ExecStartPre=/bin/bash -c 'echo "0" > PLACEHOLDER_SPOTIFY_PATH/spotplaying.flag'
