--- a/install_resources/usb-prepare.service.template
+++ b/install_resources/usb-prepare.service.template
@@ -9,13 +9,13 @@ Before=systemd-udevd.service
 
 [Service]
 Type=oneshot
-ExecStart=/bin/bash -c '
-	if [ -e PLACEHOLDER_MONITOR_USB ]; then
-		echo "PLACEHOLDER_MONITOR_USB exists: delete it"
-		/bin/rm -f PLACEHOLDER_MONITOR_USB
-	else
-		echo "PLACEHOLDER_MONITOR_USB does not exist: do nothing"
-'	
+ExecStart=/bin/bash -c ' \
+	[ -e PLACEHOLDER_MONITOR_USB ] && \
+		echo "PLACEHOLDER_MONITOR_USB exists: delete it" && \
+		/bin/rm -f PLACEHOLDER_MONITOR_USB \
+	|| \
+		echo "PLACEHOLDER_MONITOR_USB does not exist: do nothing" \
+'
 RemainAfterExit=yes
 
 [Install]
