--- a/install_resources/usb-prepare.service
+++ b/install_resources/usb-prepare.service
@@ -2,7 +2,7 @@
 # Placeholders will be modified by ../oradio_install.sh script
 
 [Unit]
-Description=Remove PLACEHOLDER_MONITOR_USB before udev
+Description=Remove /media/usb_ready before udev
 DefaultDependencies=no
 # Ensure this runs before udev is launched:
 Before=systemd-udevd.service
@@ -10,11 +10,11 @@ Before=systemd-udevd.service
 [Service]
 Type=oneshot
 ExecStart=/bin/bash -c ' \
-	[ -e PLACEHOLDER_MONITOR_USB ] && \
-		echo "PLACEHOLDER_MONITOR_USB exists: delete it" && \
-		/bin/rm -f PLACEHOLDER_MONITOR_USB \
+	[ -e /media/usb_ready ] && \
+		echo "/media/usb_ready exists: delete it" && \
+		/bin/rm -f /media/usb_ready \
 	|| \
-		echo "PLACEHOLDER_MONITOR_USB does not exist: do nothing" \
+		echo "/media/usb_ready does not exist: do nothing" \
 '
 RemainAfterExit=yes
 
