Replace /bin/... by /usr/bin/...
/bin is a symlink. For consistency and clarity use the canonical path /usr/bin

--- a/install_resources/librespot.service.template
+++ b/install_resources/librespot.service.template
@@ -14,8 +14,8 @@ StandardError=append:PLACEHOLDER_LOGFILE_SPOTIFY
 ExecStartPre=/usr/bin/amixer -c DigiAMP sset VolumeSpotCon1 0%
 
 # Reset flag files before starting librespot
-ExecStartPre=/bin/bash -c 'echo "0" > PLACEHOLDER_SPOTIFY_PATH/spotactive.flag'
-ExecStartPre=/bin/bash -c 'echo "0" > PLACEHOLDER_SPOTIFY_PATH/spotplaying.flag'
+ExecStartPre=/usr/bin/bash -c 'echo "0" > PLACEHOLDER_SPOTIFY_PATH/spotactive.flag'
+ExecStartPre=/usr/bin/bash -c 'echo "0" > PLACEHOLDER_SPOTIFY_PATH/spotplaying.flag'
 
 ExecStart=/usr/bin/librespot \
     --name Oradio \
