--- a/install_resources/usb-prepare.service
+++ b/install_resources/usb-prepare.service
@@ -9,10 +9,10 @@ Before=systemd-udevd.service
 
 [Service]
 Type=oneshot
-ExecStart=/bin/bash -c ' \
+ExecStart=/usr/bin/bash -c ' \
 	[ -e /media/usb_ready ] && \
 		echo "/media/usb_ready exists: delete it" && \
-		/bin/rm -f /media/usb_ready \
+		/usr/bin/rm -f /media/usb_ready \
 	|| \
 		echo "/media/usb_ready does not exist: do nothing" \
 '
