--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,7 +23,9 @@ jobs:
       run: |
         sudo apt-get update
         # volume
-        sudo apt-get install -y libasound2-dev python3-gi python3-dbus
+        sudo apt-get install -y libasound2-dev
+        # D-Bus and introspection
+        sudo apt-get install -y python3-dbus python3-gi
 
     - name: Install Python dependencies
       run: |
