--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -6,11 +6,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.11"]
+
     steps:
     - uses: actions/checkout@v4
 
@@ -18,36 +19,26 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
 
-    - name: Install system dependencies
+    - name: Install system dependencies for linting
       run: |
         sudo apt-get update
-        # volume
-        sudo apt-get install -y libasound2-dev
-        # D-Bus and introspection
-        sudo apt-get install -y python3-dbus python3-gi
+        sudo apt-get install -y \
+          libasound2-dev \
+          python3-dbus python3-gi \
+          gir1.2-glib-2.0 \
+          libgirepository1.0-dev
 
-    - name: Install Python dependencies
+    - name: Install Python dependencies for linting
       run: |
         python -m pip install --upgrade pip
         pip install pylint
-        # backlighting
-        pip install smbus2 rpi-lgpio
-        # logging
-        pip install concurrent_log_handler requests
-        # network
-        pip install nmcli
-        # utils
-        pip install vcgencmd
-        # usb_service
-        pip install watchdog
-        # audio
-        pip install python-mpd2
-        pip install pyalsaaudio --use-pep517
-        # web_service
-        pip install pydantic fastapi JinJa2 uvicorn python-multipart
+        pip install smbus2 rpi-lgpio concurrent_log_handler requests nmcli \
+                    vcgencmd watchdog python-mpd2 pyalsaaudio \
+                    pydantic fastapi JinJa2 uvicorn python-multipart
 
-    - name: Analysing the code with pylint
+    - name: Run pylint
       # Disable immediate exit on error
       # Use .pylintrc 
       # Prevent MPDClient no-member errors, as they are false positives
