--- a/install_resources/oradio.service.template
+++ b/install_resources/oradio.service.template
@@ -2,6 +2,8 @@
 
 [Unit]
 Description=Oradio
+After=librespot.service
+Requires=librespot.service
 After=multi-user.target
 # must be greater than RestartSec * StartLimitBurst otherwise the service will be restarted indefinitely
 StartLimitInterval=55
