--- a/install_resources/mpd.conf
+++ b/install_resources/mpd.conf
@@ -3,6 +3,12 @@
 # or /usr/share/doc/mpd/html/user.html
 
 
+# The current mpd version (23) has a default connection_timeout of 60 seconds
+# For performance reasons we want the connection to never be disconnected
+# Setting connection_timeout to 0 does not work: infinite is not allowed
+# Therefore we set connection_timeout to 1 year, essentially the same as infinite
+connection_timeout "31536000"
+
 # Files and directories #######################################################
 #
 # This setting controls the top directory which MPD will search to discover the
