--- a/install_resources/oradio.service.template
+++ b/install_resources/oradio.service.template
@@ -2,8 +2,7 @@
 
 [Unit]
 Description=Oradio
-After=multi-user.target librespot.service
-Requires=librespot.service
+After=multi-user.target
 # must be greater than RestartSec * StartLimitBurst otherwise the service will be restarted indefinitely
 StartLimitInterval=55
 # Try max 5 times
