--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -9,33 +9,62 @@ jobs:
   lint:
     name: Run Ruff linter to identify deprecated code
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
-
-    env:
-      REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y  python3-gi python3-dbus libasound2-dev
 
-      - name: Install Ruff
-        run: pip install ruff
+    - name: Set up Python virtual environment
+      run: |
+        python3 -m venv --system-site-packages ~/.venv
+        source ~/.venv/bin/activate
+        python -m pip install --upgrade pip
+        pip install -r .github/workflows/oradio_modules.txt
 
-      - name: Run ruff and fail on deprecated warnings
-        run: |
-          ruff check . --select UP,B002,B006 | grep -i deprecated > ruff_result.txt || true
-          if [ -s ruff_result.txt ]; then
-            echo "Found deprecated code:"
-            cat ruff_result.txt
-            exit 1
-          else
-            echo "No deprecated code found."
-            exit 0
-          fi
+    - name: Run ruff, check for deprecated, and write job summary
+      # Disable immediate exit on error
+      # Use .oradio_modules.txt
+      run: |
+        set +e
+
+        # Activate virtual environment
+        source ~/.venv/bin/activate
+
+        # Output file
+        RESULT_FILE=ruff_result.txt
+        : > $RESULT_FILE
+
+        # Run Ruff for potential deprecated or unsafe patterns
+        echo "### 🧹 Ruff static analysis results" >> $RESULT_FILE
+        ruff check . \
+          --select F,D,ERA \
+          --extend-ignore D203,D213 \
+          .github/workflows/oradio_modules.txt \
+          | grep -i deprecated >> $RESULT_FILE
+
+        # Runtime deprecation warnings for modules in oradio_modules.txt
+        echo "### ⚠️ Runtime deprecations from imported modules" >> $RESULT_FILE
+        python3 .github/workflows/check_deprecated.py >> $RESULT_FILE 2>&1
+
+        # Write GitHub job summary
+        echo "### 🧹 Ruff Deprecated code check summary" >> $GITHUB_STEP_SUMMARY
+        if [ ! -s $RESULT_FILE ]; then
+          echo "⚠️ Deprecated code or runtime warnings found. Please resolve before continueing." >> $GITHUB_STEP_SUMMARY
+          echo -e "\n📥 Download **ruff_result.txt** from the **Artifacts** section of this workflow run to review all issues." >> $GITHUB_STEP_SUMMARY
+        else
+          echo "✅ No deprecated code or runtime warnings found." >> $GITHUB_STEP_SUMMARY
+          rm -f $RESULT_FILE
+        fi
+
+    - name: Upload Ruff result
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: ruff_result.txt
+        path: ruff_result.txt
+        if-no-files-found: ignore
