--- a/install_resources/mpd.conf
+++ b/install_resources/mpd.conf
@@ -2,10 +2,12 @@
 # Read the user manual for documentation: http://www.musicpd.org/doc/user/
 # or /usr/share/doc/mpd/html/user.html
 
-# The current mpd version (23) has a default connection_timeout of 60 seconds
-# For performance reasons we want the connection to never be disconnected
-# Setting connection_timeout to 0 does not work: infinite is not allowed
-# Therefore we set connection_timeout to 1 year, essentially the same as infinite
+# Additional config can be done in /etc/mpd/mpd_local.conf (cf. include_optional)
+
+# MPD has a default connection_timeout of 60 seconds.
+# For performance reasons we want the connection to never be disconnected.
+# Setting connection_timeout to 0 does not work: infinite is not allowed.
+# Therefore we set connection_timeout to 1 year, essentially the same as infinite.
 connection_timeout "31536000"
 
 # Files and directories #######################################################
@@ -117,14 +119,14 @@ restore_paused "yes"
 # This setting defines a list of tag types that will be extracted during the
 # audio file discovery process. The complete list of possible values can be
 # found in the user manual.
-#metadata_to_use	"artist,album,title,track,name,genre,date,composer,performer,disc"
+metadata_to_use	"artist,title"
 #
 # This example just enables the "comment" tag without disabling all
 # the other supported tags:
 #metadata_to_use "+comment"
 #
 # This setting enables automatic update of MPD's database when files in
-# music_directory are changed. Default is "no"
+# music_directory are changed.
 #
 #auto_update	"yes"
 #
