--- a/install_resources/usb_low_idle_power.service
+++ b/install_resources/usb_low_idle_power.service
@@ -2,7 +2,7 @@
 # Placeholders will be modified by ../oradio_install.sh script
 
 [Unit]
-Description=Configure for low standby power
+Description=Configure USB low idle power
 # Ensure this runs before oradio service is launched
 Before=oradio.service
 
@@ -11,14 +11,6 @@ Type=oneshot
 
 # allow USB to suspend when idle
 ExecStart=/usr/bin/bash -c 'echo auto > /sys/bus/usb/devices/1-1/power/control'
-
-# De-authorize de USB - geen stroom, geen toegang
-ExecStart=/usr/bin/bash -c 'echo 0 > /sys/bus/usb/devices/1-1/authorized'
-
-# Authorize de USB - wel stroom, wel toegang
-ExecStart=/usr/bin/bash -c 'echo 1 > /sys/bus/usb/devices/1-1/authorized'
-
-RemainAfterExit=yes
 
 [Install]
 WantedBy=oradio.service
