--- a/install_resources/asound.conf
+++ b/install_resources/asound.conf
@@ -16,16 +16,29 @@ pcm.dmixer {
     ipc_perm 0666
     slave {
         pcm "oradio_snd_card"
-        rate 44100
+        rate 96000
         format S16_LE       
         channels 2
         period_time 0
-        period_size 1024
-        buffer_size 4096
+        period_size 2048
+        buffer_size 8192
     }
     bindings {
         0 0
         1 1
+    }
+}
+
+#########################################################################
+# Bridge into dmixer: resample everything to 96 kHz before dmix
+#########################################################################
+pcm.dmixer_in {
+    type plug
+    slave {
+        pcm "dmixer"
+        rate 96000
+        format S16_LE
+        channels 2
     }
 }
 #########################################################################
@@ -33,7 +46,7 @@ pcm.dmixer {
 #########################################################################
 pcm.SoftVolSpotCon2 {
     type softvol
-    slave.pcm "dmixer"
+    slave.pcm "dmixer_in"
     control {
         name "VolumeSpotCon2"
         card "DigiAMP"
@@ -94,7 +107,7 @@ pcm.spotify_equal {
 
 pcm.SoftVolMPD {
     type softvol
-    slave.pcm "dmixer"
+    slave.pcm "dmixer_in"
     control {
         name "VolumeMPD"
         card "DigiAMP"
@@ -132,7 +145,7 @@ pcm.mpd_equal {
 #########################################################################
 pcm.SoftVolSysSound {
     type softvol
-    slave.pcm "dmixer"
+    slave.pcm "dmixer_in"
     control {
         name "VolumeSysSound"
         card "DigiAMP"
