--- a/install_resources/mpd.conf.template
+++ b/install_resources/mpd.conf.template
@@ -43,7 +43,7 @@ db_file				"/var/lib/mpd/tag_cache"
 # If you use systemd, do not configure a log_file.  With systemd, MPD
 # defaults to the systemd journal, which is fine.
 #
-#log_file			"/var/log/mpd/mpd.log"
+log_file			"PLACEHOLDER_LOGFILE_MPD"
 
 # This setting sets the location of the file which stores the process ID
 # for use of mpd --kill and some init scripts. This setting is disabled by
