Add back asound inputs activation

--- a/install_resources/asound.conf
+++ b/install_resources/asound.conf
@@ -41,18 +41,6 @@ pcm.dmixer_in {
         channels 2
     }
 }
-#########################################################################
-# Volume Control for Spotify2: for lower volume during announcements
-#########################################################################
-pcm.SoftVolSpotCon2 {
-    type softvol
-    slave.pcm "dmixer_in"
-    control {
-        name "VolumeSpotCon2"
-        card "DigiAMP"
-    }
-}
-
 
 #########################################################################
 # Volume Control for Spotify: for mute Spotify if switched off
@@ -62,6 +50,18 @@ pcm.SoftVolSpotCon1 {
     slave.pcm "SoftVolSpotCon2"
     control {
         name "VolumeSpotCon1"
+        card "DigiAMP"
+    }
+}
+
+#########################################################################
+# Volume Control for Spotify: for lower volume during announcements
+#########################################################################
+pcm.SoftVolSpotCon2 {
+    type softvol
+    slave.pcm "dmixer_in"
+    control {
+        name "VolumeSpotCon2"
         card "DigiAMP"
     }
 }
@@ -169,7 +169,6 @@ pcm.SysSound_in {
     type plug
     slave.pcm "SoftVolSysSound"
 }
-
 
 #########################################################################
 # Default PCM: You can set your default as needed.
