--- a/install_resources/asound.conf
+++ b/install_resources/asound.conf
@@ -1,213 +1,280 @@
-#########################################################################
-# Hardware: physical sound card (DigiAMP)
-#########################################################################
+#############################################################################
+# Physical sound card (DigiAMP)
+#	- Direct access to the sound card, no extra software processing
+#	- Inputs like sample rate, format, and channels must match the hardware
+#############################################################################
 pcm.oradio_snd_card {
+	type hw
+	card "DigiAMP"
+	device 0
+}
+
+#############################################################################
+# Mixer allows multiple ALSA applications to play simultaneously
+#	- Fully software-based mixing
+#	- ipc_key + ipc_perm = shared memory used to combine audio streams
+#	- bindings = maps software channels to hardware channels
+#############################################################################
+pcm.dmixer {
+	type dmix
+	ipc_key 1024
+	ipc_perm 0666
+	slave.pcm "oradio_snd_card"
+
+	# Needed as sound card has 2 channels
+	bindings {
+		0 0
+		1 1
+	}
+}
+
+#############################################################################
+# Converts sample rate, format, and channel layout to match the slave
+#############################################################################
+pcm.dmixer_in {
+	type plug
+	slave.pcm "dmixer"
+}
+
+#############################################################################
+# Hardware Control Interface
+#############################################################################
+ctl.!default {
     type hw
     card "DigiAMP"
-    device 0
 }
 
-#########################################################################
-# DMIXER: mixing and hardware output
-#########################################################################
-pcm.dmixer {
-    type dmix
-    ipc_key 1024
-    ipc_perm 0666
-    slave {
-        pcm "oradio_snd_card"
-        rate 96000
-        format S16_LE       
-        channels 2
-        period_time 0
-        period_size 2048
-        buffer_size 8192
-    }
-    bindings {
-        0 0
-        1 1
-    }
-}
-
-#########################################################################
-# Bridge into dmixer: resample everything to 96 kHz before dmix
-#########################################################################
-pcm.dmixer_in {
-    type plug
-    slave {
-        pcm "dmixer"
-        rate 96000
-        format S16_LE
-        channels 2
-    }
-}
-
-#########################################################################
-# Volume Control for Spotify: for mute Spotify if switched off
-#########################################################################
-pcm.SoftVolSpotCon1 {
-    type softvol
-    slave.pcm "SoftVolSpotCon2"
-    control {
-        name "VolumeSpotCon1"
-        card "DigiAMP"
-    }
-}
-
-#########################################################################
-# Volume Control for Spotify: for lower volume during announcements
-#########################################################################
-pcm.SoftVolSpotCon2 {
-    type softvol
-    slave.pcm "dmixer_in"
-    control {
-        name "VolumeSpotCon2"
-        card "DigiAMP"
-    }
-}
-
-#########################################################################
-# Post-Equalizer Conversion for Spotify
-#########################################################################
-pcm.spotify_equal_out_plug {
-    type plug
-    slave {
-         pcm "SoftVolSpotCon1"
-         format S16_LE
-         rate 44100
-         channels 2
-    }
-}
-
-#########################################################################
-# Equalizer Stage for Spotify (Raw)
-#########################################################################
-pcm.spotify_equal_raw {
-    type equal
-    slave.pcm "spotify_equal_out_plug"
-    controls "/etc/alsaequal.bin"
-}
-
-#########################################################################
-# Outer Plug for Spotify Equalizer Input
-#########################################################################
-pcm.spotify_equal {
-    type plug
-    slave {
-         pcm "spotify_equal_raw"
-         format FLOAT_LE
-         rate 44100
-         channels 2
-    }
-}
-
-#########################################################################
+#############################################################################
 # MPD Chain: Separate volume and equalizer for MPD input
-#########################################################################
+# MPD_in -> caps_eq_mpd -> SoftVolMPD -> dmixer_in -> dmix
+#############################################################################
 
+#############################################################################
+# SoftVolMPD provides a dedicated software volume control for MPD input
+#	- Allows MPD playback volume adjustment independently of system master
+#	- Works entirely in software
+#############################################################################
 pcm.SoftVolMPD {
-    type softvol
-    slave.pcm "dmixer_in"
-    control {
-        name "VolumeMPD"
-        card "DigiAMP"
-    }
+	type softvol
+	slave.pcm "dmixer_in"
+	control {
+		name "VolumeMPD"
+		card "DigiAMP"
+# Optional: makes volume control more accurate and safe, especially with EQ-boosts which might otherwise clip
+#		min_dB -50.0
+#		max_dB 0.0
+#		resolution 256
+	}
 }
 
+#############################################################################
+# Converts sample rate, format, and channel layout to softvol requirements
+#############################################################################
 pcm.mpd_equal_out_plug {
     type plug
     slave {
          pcm "SoftVolMPD"
-         format S16_LE
-         rate 44100
+         format S24_LE
+         rate 48000
          channels 2
     }
 }
 
-pcm.mpd_equal_raw {
-    type equal
-    slave.pcm "mpd_equal_out_plug"
-    controls "/etc/alsaequal.bin"
+#############################################################################
+# EqFA4p is a 4-band parametric equalizer from the CAPS LADSPA plugin set
+# Note: Automatically converts to FLOAT_LE for LADSPA
+# Each band lets you:
+#	- choose a center frequency
+#	- boost or cut that frequency
+#	- control the Q (bandwidth)
+#
+# EqFA4p has 4 identical bands, applied in series:
+# Band	Controls	Purpose
+# Band 1	freq / gain / Q	Low-mid shaping
+# Band 2	freq / gain / Q	Cleanup / body
+# Band 3	freq / gain / Q	Presence
+# Band 4	freq / gain / Q	High detail
+#############################################################################
+pcm.caps_eq_mpd {
+	type ladspa
+	slave.pcm "mpd_equal_out_plug"
+	path "/usr/lib/ladspa"	# location where to find the plugin
+
+	plugins [
+		{
+			label EqFA4p
+			input {
+# Example configuration: Adjust to match preferred audio shape
+				controls [
+					100   3   1.0   # band 1: freq / gain / Q
+					400  -3   1.2   # band 2
+					2000  2   0.8   # band 3
+					8000  1   0.7   # band 4
+				]
+			}
+		}
+	]
 }
 
-pcm.mpd_equal {
-    type plug
-    slave {
-         pcm "mpd_equal_raw"
-         format FLOAT_LE
-         rate 44100
-         channels 2
-    }
-}
-
-#########################################################################
-# Volume controller System Sounds
-#########################################################################
-pcm.SoftVolSysSound {
-    type softvol
-    slave.pcm "dmixer_in"
-    control {
-        name "VolumeSysSound"
-        card "DigiAMP"
-    }
-}
-
-#########################################################################
-# Input Definitions for Spotify, MPD, and System Sounds
-#########################################################################
-pcm.SpotCon_in {
-    type plug
-    slave.pcm "spotify_equal"
-}
-
+#############################################################################
+# Input PCM exposed to MPD
+#############################################################################
 pcm.MPD_in {
-    type plug
-    slave.pcm "mpd_equal"
+	type plug
+	slave.pcm "caps_eq_mpd"
 }
 
-pcm.SysSound_in {
-    type plug
-    slave.pcm "SoftVolSysSound"
-}
-
-#########################################################################
-# Default PCM: You can set your default as needed.
-#########################################################################
-pcm.!default {
-    type plug
-    slave.pcm "dmixer"
-}
-
-#########################################################################
-# Control Interfaces
-#########################################################################
-ctl.equal{
-    type equal
-    controls "/etc/alsaequal.bin"
-}
-
-ctl.SoftVolSpotCon1 {
-   type softvol
-   card "DigiAMP"
-}
-
-ctl.SoftVolSpotCon2 {
-   type softvol
-   card "DigiAMP"
-}
-
+#############################################################################
+# MPD Volume Control Interface
+#############################################################################
 ctl.SoftVolMPD {
    type softvol
    card "DigiAMP"
 }
 
+#############################################################################
+# Spotify Chain: Separate volume and equalizer for Spotify input
+# Spotify_in -> caps_eq_spotify -> SoftVolSpotCon1 -> SoftVolSpotCon2 -> dmixer_in -> dmix
+#############################################################################
 
-ctl.SoftVolSysSound {
+#############################################################################
+# SoftVolSpotify provides a dedicated software volume control for Spotify input
+#	- Allows Spotify playback volume adjustment independently of system master
+#	- Works entirely in software
+#############################################################################
+pcm.SoftVolSpotCon2 {
+	type softvol
+	slave.pcm "dmixer_in"
+	control {
+		name "VolumeSpotCon2"
+		card "DigiAMP"
+# Optional: makes volume control more accurate and safe, especially with EQ-boosts which might otherwise clip
+#		min_dB -50.0
+#		max_dB 0.0
+#		resolution 256
+	}
+}
+
+#############################################################################
+# Spotify Volume Control Interface
+#############################################################################
+ctl.SoftVolSpotCon2 {
    type softvol
    card "DigiAMP"
 }
 
-ctl.!default {
-    type hw
-    card "DigiAMP"
+#############################################################################
+# SoftVolSpotify provides a dedicated software volume control for Spotify input
+#	- Allows Spotify playback volume adjustment independently of system master
+#	- Works entirely in software
+#############################################################################
+pcm.SoftVolSpotCon1 {
+	type softvol
+	slave.pcm "SoftVolSpotCon2"
+	control {
+		name "VolumeSpotCon1"
+		card "DigiAMP"
+	}
+}
+
+#############################################################################
+# Spotify Volume Control Interface
+#############################################################################
+ctl.SoftVolSpotCon1 {
+   type softvol
+   card "DigiAMP"
+}
+
+#############################################################################
+# Converts sample rate, format, and channel layout to softvol requirements
+#############################################################################
+pcm.spotcon_equal_out_plug {
+    type plug
+    slave {
+         pcm "SoftVolSpotCon1"
+         format S24_LE
+         rate 48000
+         channels 2
+    }
+}
+
+#############################################################################
+# EqFA4p is a 4-band parametric equalizer from the CAPS LADSPA plugin set
+# Note: Automatically converts to FLOAT_LE for LADSPA
+# Each band lets you:
+#	- choose a center frequency
+#	- boost or cut that frequency
+#	- control the Q (bandwidth)
+# EqFA4p has 4 identical bands, applied in series:
+# Band	Controls	Purpose
+# Band 1	freq / gain / Q	Low-mid shaping
+# Band 2	freq / gain / Q	Cleanup / body
+# Band 3	freq / gain / Q	Presence
+# Band 4	freq / gain / Q	High detail
+#############################################################################
+pcm.caps_eq_spotify {
+	type ladspa
+    slave.pcm "spotcon_equal_out_plug"
+	path "/usr/lib/ladspa"	# location where to find the plugin
+
+	plugins [
+		{
+			label EqFA4p
+			input {
+# Example configuration: Adjust to match preferred audio shape
+				controls [
+					100   3   1.0   # band 1: freq / gain / Q
+					400  -3   1.2   # band 2
+					2000  2   0.8   # band 3
+					8000  1   0.7   # band 4
+				]
+			}
+		}
+	]
+}
+
+#############################################################################
+# Input PCM exposed to Spotify (Librespot)
+#############################################################################
+pcm.SpotCon_in {
+	type plug
+	slave.pcm "caps_eq_spotify"
+}
+
+#############################################################################
+# System Sounds Chain: Separate volume for sytem sounds input
+# SysSound_in -> SoftVolSysSound -> dmixer_in -> dmix
+#############################################################################
+
+#############################################################################
+# SoftVolSysSound provides a dedicated software volume control for system sound input
+#	- Allows system sound playback volume adjustment independently of system master
+#	- Works entirely in software
+#############################################################################
+pcm.SoftVolSysSound {
+	type softvol
+	slave.pcm "dmixer_in"
+	control {
+		name "VolumeSysSound"
+		card "DigiAMP"
+# Optional: makes volume control more accurate and safe
+#		min_dB -50.0
+#		max_dB 0.0
+#		resolution 256
+	}
+}
+
+#############################################################################
+# System Sound Volume Control Interface
+#############################################################################
+ctl.SoftVolSysSound {
+   type softvol
+   card "DigiAMP"
+}
+#############################################################################
+# Input PCM exposed to SysSound
+#############################################################################
+pcm.SysSound_in {
+	type plug
+	slave.pcm "SoftVolSysSound"
 }
