--- a/install_resources/asound.conf
+++ b/install_resources/asound.conf
@@ -76,11 +76,11 @@ pcm.SoftVolMPD {
 	control {
 		name "VolumeMPD"
 		card "DigiAMP"
+        }
 # Optional: makes volume control more accurate and safe, especially with EQ-boosts which might otherwise clip
-#		min_dB -50.0
-#		max_dB 0.0
-#		resolution 256
-	}
+		min_dB -50.0
+		max_dB -6.0
+		resolution 256
 }
 
 #############################################################################
@@ -122,7 +122,7 @@ pcm.caps_eq_mpd {
 			input {
 # Example configuration: Adjust to match preferred audio shape
 				controls [
-					67   10.0   1.3 
+					67    7.0   1.3 
 					1000  3.0   0.7   
 					2000  0.0   1.0   
 					8000  0.0   1.0   
@@ -164,11 +164,11 @@ pcm.SoftVolSpotCon2 {
 	control {
 		name "VolumeSpotCon2"
 		card "DigiAMP"
+        }        
 # Optional: makes volume control more accurate and safe, especially with EQ-boosts which might otherwise clip
-#		min_dB -50.0
-#		max_dB 0.0
-#		resolution 256
-	}
+		min_dB -50.0
+		max_dB -6.0
+		resolution 256
 }
 
 #############################################################################
@@ -239,7 +239,7 @@ pcm.caps_eq_spotify {
 			input {
 # Example configuration: Adjust to match preferred audio shape
 				controls [
-                                        67   10.0   1.3 
+                                        67   7.0   1.3 
                                         1000  3.0   0.7
                                         2000  0.0   1.0 
                                         8000  0.0   1.0
