--- a/install_resources/asound.conf
+++ b/install_resources/asound.conf
@@ -78,9 +78,9 @@ pcm.SoftVolMPD {
 		card "DigiAMP"
         }
 # Optional: makes volume control more accurate and safe, especially with EQ-boosts which might otherwise clip
-		min_dB -50.0
-		max_dB -6.0
-		resolution 256
+#		min_dB -50.0
+#		max_dB -6.0
+#		resolution 256
 }
 
 #############################################################################
@@ -102,35 +102,39 @@ pcm.mpd_equal_out_plug {
 # Each band lets you:
 #	- choose a center frequency
 #	- boost or cut that frequency
-#	- control the Q (bandwidth)
+#	- control the b (bandwidth)
 #
 # EqFA4p has 4 identical bands, applied in series:
 # Band	Controls	Purpose
-# Band 1	freq / gain / Q	Low-mid shaping
-# Band 2	freq / gain / Q	Cleanup / body
-# Band 3	freq / gain / Q	Presence
-# Band 4	freq / gain / Q	High detail
-#############################################################################
-pcm.caps_eq_mpd {
-	type ladspa
-	slave.pcm "mpd_equal_out_plug"
-	path "/usr/lib/ladspa"	# location where to find the plugin
+# Band 1	<act>  <freq_Hz>  <bw>  <gain_dB> Low-mid shaping
+# Band 2	<act>  <freq_Hz>  <bw>  <gain_dB>	Cleanup / body
+# Band 3	<act>  <freq_Hz>  <bw>  <gain_dB>	Presence
+# Band 4	<act>  <freq_Hz>  <bw>  <gain_dB>Q	High detail
+# Gain - master
 
-	plugins [
-		{
-			label EqFA4p
-			input {
-# Example configuration: Adjust to match preferred audio shape
-				controls [
-					67    7.0   1.3 
-					1000  3.0   0.7   
-					2000  0.0   1.0   
-					8000  0.0   1.0   
-				]
-			}
-		}
-	]
+pcm.caps_eq_mpd {
+    type ladspa
+    slave.pcm "mpd_equal_out_plug"
+    path "/usr/lib/ladspa"
+
+    plugins [
+        {
+            label EqFA4p
+            input {
+                controls [
+                    1   60     1.3    10.0    
+                    1   100    0.35   -12.0    
+                    1   1000   1.0    3.0    
+                    0   8000   1.0   0.0    
+                    -8.0                 
+                ]
+            }
+        }
+    ]
 }
+
+
+
 
 #############################################################################
 # Input PCM exposed to MPD
@@ -166,9 +170,9 @@ pcm.SoftVolSpotCon2 {
 		card "DigiAMP"
         }        
 # Optional: makes volume control more accurate and safe, especially with EQ-boosts which might otherwise clip
-		min_dB -50.0
-		max_dB -6.0
-		resolution 256
+#		min_dB -50.0
+#		max_dB -6.0
+#		resolution 256
 }
 
 #############################################################################
@@ -232,21 +236,20 @@ pcm.caps_eq_spotify {
 	type ladspa
     slave.pcm "spotcon_equal_out_plug"
 	path "/usr/lib/ladspa"	# location where to find the plugin
-
-	plugins [
-		{
-			label EqFA4p
-			input {
-# Example configuration: Adjust to match preferred audio shape
-				controls [
-                                        67   7.0   1.3 
-                                        1000  3.0   0.7
-                                        2000  0.0   1.0 
-                                        8000  0.0   1.0
-				]
-			}
-		}
-	]
+    plugins [
+        {
+            label EqFA4p
+            input {
+                controls [
+                    1   60     1.3    10.0
+                    1   100    0.35   -12.0
+                    1   1000   1.0    3.0
+                    0   8000   1.0   0.0
+                    -8.0
+                ]
+            }
+        }
+    ]
 }
 
 #############################################################################
