--- a/install_resources/asound.conf
+++ b/install_resources/asound.conf
@@ -14,6 +14,8 @@ pcm.oradio_snd_card {
 #	- Fully software-based mixing
 #	- ipc_key + ipc_perm = shared memory used to combine audio streams
 #	- bindings = maps software channels to hardware channels
+#       - Output standarized at 48 kHz, 24 bits compromise between amount 
+#         of CPU and high sound quality
 #############################################################################
 pcm.dmixer {
 	type dmix
@@ -77,7 +79,7 @@ pcm.SoftVolMPD {
 		name "VolumeMPD"
 		card "DigiAMP"
         }
-# Optional: makes volume control more accurate and safe, especially with EQ-boosts which might otherwise clip
+# Not needed to limit:
 #		min_dB -50.0
 #		max_dB -6.0
 #		resolution 256
@@ -97,20 +99,24 @@ pcm.mpd_equal_out_plug {
 }
 
 #############################################################################
+# MPD equal, the Spotify channel has simular structure
 # EqFA4p is a 4-band parametric equalizer from the CAPS LADSPA plugin set
 # Note: Automatically converts to FLOAT_LE for LADSPA
 # Each band lets you:
-#	- choose a center frequency
-#	- boost or cut that frequency
-#	- control the b (bandwidth)
+# There are 4 of four numbers (Enable/Disable, Frequency, Bandwidth, Gain). The final number is overall gain.
+# - Enable/disable:	1/0
+# - Frequency:		20 - 14000 Hz (Center Frequency)
+# - Bandwidth:		0.12 - 8 (Q factor) must have leading 0 if < 1
+# - Gain:			-24 - 24 dB
+# - Master Gain		-24 - 24 dB
 #
 # EqFA4p has 4 identical bands, applied in series:
 # Band	Controls	Purpose
-# Band 1	<act>  <freq_Hz>  <bw>  <gain_dB> Low-mid shaping
+# Band 1	<act>  <freq_Hz>  <bw>  <gain_dB>       Low-mid shaping
 # Band 2	<act>  <freq_Hz>  <bw>  <gain_dB>	Cleanup / body
 # Band 3	<act>  <freq_Hz>  <bw>  <gain_dB>	Presence
-# Band 4	<act>  <freq_Hz>  <bw>  <gain_dB>Q	High detail
-# Gain - master
+# Band 4	<act>  <freq_Hz>  <bw>  <gain_dB>Q	Not used
+# Gain - master: to prevent clipping, reduced to max Gain + 2 dB
 
 pcm.caps_eq_mpd {
     type ladspa
@@ -125,7 +131,7 @@ pcm.caps_eq_mpd {
                     1   60     0.9    10.0    
                     1   88     0.35   -3.0    
                     1   1000   1.0    2.0    
-                    1   250    1.0    -2.0    
+                    0   8000   1.0    0.0    
                     -8.0                 
                 ]
             }
@@ -169,7 +175,7 @@ pcm.SoftVolSpotCon2 {
 		name "VolumeSpotCon2"
 		card "DigiAMP"
         }        
-# Optional: makes volume control more accurate and safe, especially with EQ-boosts which might otherwise clip
+#  Not needed to limit: 
 #		min_dB -50.0
 #		max_dB -6.0
 #		resolution 256
@@ -219,19 +225,8 @@ pcm.spotcon_equal_out_plug {
 }
 
 #############################################################################
-# EqFA4p is a 4-band parametric equalizer from the CAPS LADSPA plugin set
-# Note: Automatically converts to FLOAT_LE for LADSPA
-# Each band lets you:
-#	- choose a center frequency
-#	- boost or cut that frequency
-#	- control the Q (bandwidth)
-# EqFA4p has 4 identical bands, applied in series:
-# Band	Controls	Purpose
-# Band 1	freq / gain / Q	Low-mid shaping
-# Band 2	freq / gain / Q	Cleanup / body
-# Band 3	freq / gain / Q	Presence
-# Band 4	freq / gain / Q	High detail
-#############################################################################
+# Spotify  equal, see MPD equal for details, is 1 to 1 copy
+
 pcm.caps_eq_spotify {
 	type ladspa
     slave.pcm "spotcon_equal_out_plug"
@@ -244,7 +239,7 @@ pcm.caps_eq_spotify {
                     1   60     0.9    10.0
                     1   88     0.35   -3.0
                     1   1000   1.0    2.0
-                    1   250    1.0    -2.0
+                    0   8000   1.0    0.0
                     -8.0
                 ]
             }
